# AI-Watermark

./: .gitignore  CLAUDE.md  PRD-FrequencyDomainWatermarking-MVP.docx  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/attacks/: __init__.py  suite.py
src/benchmark/: __init__.py  runner.py
src/cli/: __init__.py  main.py
src/evaluation/: ML_RESEARCH.md  __init__.py  __main__.py  aggregator.py  configs.py  image_corpus.py  metrics.py  report.py  runner.py
src/watermark/: __init__.py  embedding.py  extraction.py  masking.py  payload.py  preprocessor.py  reconstruction.py  sync.py  tiling.py
tests/: conftest.py  test_attacks.py  test_benchmark.py  test_embedding.py  test_extraction.py  test_masking.py  test_payload.py  test_preprocessor.py  test_roundtrip.py  test_sync.py
